--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" href="/vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,6 +24,7 @@
         </div>
 
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
       </div>
@@ -64,6 +67,10 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper container">
+      </div>
+    </section>
    <section id="order">
      <div id="product-list" class="product-list container"></div>
    </section>
@@ -71,6 +78,131 @@
      <div class="booking-wrapper container"></div>
    </section>
  </div>
+
+  <script id="template-home" type="text/x-handlebars-template">
+
+    <div class="wrapper">
+      <div class="home-boxes">
+
+          <div class="home-boxes-links">
+            <a href="#order" class="btn-link">
+              <div class="boxes-link">
+                <p class="boxes-title">order online</p>
+                <p class="boxes-subtitle">Delicious food delivered to your door</p>
+                <img src="/images/home/pizza-1.jpg" alt="pizza">
+              </div>
+            </a>
+  
+            <a href="#booking" class="btn-link">
+              <div class="boxes-link">
+                <p class="boxes-title">book a table</p>
+                <img src="/images/home/pizza-2.jpg" alt="table">
+              </div>
+            </a>
+          </div>
+
+          <div class="boxes-opening">
+            <p class="boxes-title">opening hours</p>
+            <p class="boxes-subtitle">mon-sun: 12pm-11pm</p>
+          </div>
+
+      </div>
+    </div>
+
+
+    <div class="carousel" data-flickity='{ "autoPlay": true }'>
+      <div class="carousel-cell">
+        <div class="carousel-img">
+          <img src="/images/home/pizza-3.jpg" alt="drinking lady">
+        </div>
+        <div class="carousel-description">
+          <h3>Amazing service!</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit labore consequuntur cumque ad temporibus ipsum soluta, repellendus architecto commodi.</p>
+          <h4>-Margaret Osborne</h4>
+        </div>
+      </div>
+      <div class="carousel-cell">
+        <div class="carousel-img">
+          <img src="/images/home/pizza-4.jpg" alt="drinking lady">
+        </div>
+        <div class="carousel-description">
+          <h3>Amazing service!</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit labore consequuntur cumque ad temporibus ipsum soluta, repellendus architecto commodi.</p>
+          <h4>-Margaret Osborne</h4>
+        </div>
+      </div>
+      <div class="carousel-cell">
+        <div class="carousel-img">
+          <img src="/images/home/pizza-5.jpg" alt="drinking lady">
+        </div>
+        <div class="carousel-description">
+          <h3>Amazing service!</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit labore consequuntur cumque ad temporibus ipsum soluta, repellendus architecto commodi.</p>
+          <h4>-Margaret Osborne</h4>
+        </div>
+      </div>
+      
+    </div>
+
+    <div class="gallery">
+
+      <div class="gallery-box">
+        <div class="overlay">
+          <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+        <img src="/images/home/pizza-4.jpg" alt="jakieś talerze">
+      </div>
+      <div class="gallery-box">
+        <div class="overlay">
+          <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+        <img src="/images/home/pizza-5.jpg" alt="veggies">
+      </div>
+      <div class="gallery-box">
+        <div class="overlay">
+          <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+        <img src="/images/home/pizza-6.jpg" alt="pizza">
+      </div>
+      <div class="gallery-box">
+        <div class="overlay">
+          <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+        <img src="/images/home/pizza-7.jpg" alt="open sign">
+      </div>
+      <div class="gallery-box">
+        <div class="overlay">
+          <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+        <img src="/images/home/pizza-8.jpg" alt="flour">
+      </div>
+      <div class="gallery-box">
+        <div class="overlay">
+          <div class="icons">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+        <img src="/images/home/pizza-9.jpg" alt="entrence">
+      </div>
+      <a href="https://www.instagram.com/">View more on Instagram</a>
+    </div>
+  </script>
 
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
@@ -183,7 +315,7 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="/vendor/range-slider.min.js"></script>
   <script src="js/app.js" type="module"></script>
-
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <script id="template-booking-widget" type="text/x-handlebars-template">
     <div class="booking-widget">
       <h2 class="page__title no-spacing">Book a table</h2>
